Create Form in  HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
+
 <body>
-    
+    <main>
+        <section>
+            <form action="">
+                <fieldset>
+                    <h1>Basic HTML Form </h1>
+                    <fieldset>
+                        <legend>Name</legend>
+                        <div>
+                            <label for="">First Name : </label>
+                            <br>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label for="">Last Name : </label>
+                            <br>
+                            <input type="text">
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Other Question </legend>
+                        <div>
+                            <label for="">Check a Drink </label>
+                            <br>
+                            <label for="coffee"><input type="radio" name="drink" id="coffee">Coffee</label>
+                            <br>
+                            <label for="tea"><input type="radio" name="drink" id="tea" checked>Tea</label>
+                            <br>
+                            <label for="hotChocolate"><input type="radio" name="drink" id="hotChocolate">hot
+                                Chocolate</label>
+                            <br>
+                            <br>
+                            <label for="">What ice crame do you like</label>
+                            <br>
+                            <label for="chocolate"><input type="checkbox" name="" id="chocolate">Chocolate</label><br>
+                            <label for="chocolatePudding"><input type="checkbox" name="" id="chocolatePudding">Chocolate
+                                Pudding</label><br>
+                            <label for="chocolatePeanutButter"><input type="checkbox" checked name=""
+                                    id="chocolatePeanutButter">Chocolate Peanut Butter</label><br>
+                            <label for="vanilla"><input type="checkbox" name="" id="vanilla">Vanilla</label><br>
+                            <label for="strawberry"><input type="checkbox" name=""
+                                    id="strawberry">Strawberry</label><br>
+                        </div>
+                        <br>
+                        <div>
+                            <label for="">Select a School </label><br>
+                            <select name="school">
+                                <option value="school1">School 1</option>
+                                <option value="school2">School 2</option>
+                                <option value="school3">School 3</option>
+                                <option value="school4">School 4</option>
+                                <option value="school5">School 5</option>
+                            </select>
+
+                        </div>
+                        <br>
+                        <div>
+                            <label for="">
+                                Place provide Comments :
+                            </label><br>
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                        </div>
+                    </fieldset>
+                    <br><input type="submit" value="Submit">
+                </fieldset>
+            </form>
+        </section>
+    </main>
 </body>
+
 </html>
